--- a/carts/templates/carts/checkout-done.html
+++ b/carts/templates/carts/checkout-done.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <div class="col-6 mx-auto">
-    <h1 class ="display-1">Thank You for your order from us !!!</h1>
+    <h1 class ="display-1">Thank You for your ordering from us  !!!</h1>
   </div>
 {% endblock %}
