--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -2,6 +2,12 @@
 {% extends "base.html" %}
 {% load static %}
 {%block content %}
+<style>
+body {
+     background-image: url("/static/regis.jpg");
+}
+</style>
+
 <form method= 'POST' class="form-signin" style = "width:500px; margin:auto" >
   <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Register</h1>
