--- a/static/cover.css
+++ b/static/cover.css
@@ -36,6 +36,8 @@ body {
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  -webkit-input-placeholder {
+   color: rgba(255, 255, 255, .5);
 }
 
 .cover-container {
