--- a/templates/contact_page.html
+++ b/templates/contact_page.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<style>
+body {
+     background-image: url("/static/w.jpg");
+}
+</style>
     <div class="container">
       <div class="row">
         <div class="col">
