--- a/carts/templates/carts/checkout.html
+++ b/carts/templates/carts/checkout.html
@@ -17,16 +17,16 @@
 {% else %}
       {% if not object.shipping_address %}
       <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <p class = "lead">Shipping Address</p>
           <hr/>
         </div>
           <div class ='row'>
-            <div class = "col-6">
+            <div class = "col-6" style="text-align:right;">
           {% url "checkout_address_create" as checkout_address_create %}
           {% include 'addresses/forms.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping' %}
         </div>
-        <div class="col-6">
+        <div class="col-6" style="margin-left:200px;text-align:left;">
           {% url "checkout_address_reuse" as checkout_address_reuse %}
           {% include 'addresses/prev_addresses.html' with address_qs=address_qs next_url=request.build_absolute_uri address_type='shipping' action_url=checkout_address_reuse %}
         </div>
@@ -37,13 +37,13 @@
           <p class = "lead">Billing Address</p>
           <hr/>
         </div>
-        <div class="col-6">
+        <div class="col-6" style="text-align:right;">
           {% url "checkout_address_create" as checkout_address_create %}
           {% include 'addresses/forms.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing' %}
-        <div class="col-6">
+          </div>
+        <div class="col-6" style="margin-left:200px;text-align:left;">
           {% url "checkout_address_reuse" as checkout_address_reuse %}
           {% include 'addresses/prev_addresses.html' with address_qs=address_qs next_url=request.build_absolute_uri address_type='billing' action_url=checkout_address_reuse %}
-        </div>
         </div>
       </div>
       {% else %}
