--- a/static/signin.css
+++ b/static/signin.css
@@ -13,7 +13,15 @@ body {
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
 
+img.avatar {
+    width: 40%;
+    border-radius: 50%;
+}
 .form-signin {
   width: 100%;
   max-width: 330px;
@@ -42,4 +50,9 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
 }
